sophons/apps/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cilium-trustedips
  namespace: traefik
spec:
  plugin:
    cilium-trustedips:
      logLevel: INFO
      logFormat: json
      staticTrustedCIDRs:
        - 100.64.0.0/10
        - fd7a:115c:a1e0::/48
      endpointLabelSelector:
        app.kubernetes.io/name: cloudflared
      cidrGroupLabelSelector:
        trusted-reverse-proxy: "true"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-cache
  namespace: traefik
spec:
  plugin:
    cacheify:
      path: /cache/default
      maxExpiry: 900 # 15mins
      cleanup: 300 # 5 mins
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-compression
  namespace: traefik
spec:
  compress: {}
  # encodings: [gzip, br, zstd] # Already the default order
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-anubis
  namespace: traefik
spec:
  forwardAuth:
    address: http://anubis:8080/.within.website/x/cmd/anubis/api/check
    trustForwardHeader: true
    preserveLocationHeader: true
    # authSigninURL: /.within.website/?redir=/
