sophons/apps/traefik/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis
  namespace: traefik
  labels:
    app.kubernetes.io/name: anubis
    app.kubernetes.io/instance: traefik
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: anubis
      app.kubernetes.io/instance: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: anubis
        app.kubernetes.io/instance: traefik
    spec:
      hostUsers: false
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: topology.kubernetes.io/region
                    operator: NotIn
                    values: [ng]
              weight: 100

      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: config
          configMap:
            name: anubis-config

      containers:
        - name: anubis
          image: ghcr.io/techarohq/anubis:v1.27.0@sha256:8828275668b7bc675679f100970f9714f731388fbbf66ae94de8aca952e3fc4a

          ports:
            - containerPort: 8080
              name: anubis
            - containerPort: 9090
              name: metrics

          volumeMounts:
            - mountPath: /etc/anubis/config
              name: config
              readOnly: true

          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
