sophons/apps/traefik/service.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: positron
  namespace: traefik
  labels:
    app.kubernetes.io/name: unifios
    app.kubernetes.io/instance: positron
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/endpointslice-discovery-v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: positron
  labels:
    kubernetes.io/service-name: positron
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses: [10.42.0.1]
    conditions:
      ready: true
---
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.34.1/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: anubis
  namespace: traefik
  labels:
    app.kubernetes.io/name: anubis
    app.kubernetes.io/instance: traefik
spec:
  ports:
    - name: anubis
      port: 8080
      targetPort: anubis
    - name: metrics
      port: 9090
      targetPort: metrics
  selector:
    app.kubernetes.io/name: anubis
    app.kubernetes.io/instance: traefik
