sophons/apps/traefik/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: positron
  namespace: traefik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Unifi network administration
    gethomepage.dev/group: Admin
    gethomepage.dev/icon: ubiquiti-unifi.svg
    gethomepage.dev/name: Unifi
    gethomepage.dev/app: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - positron.sophons.cloud

  rules:
    - backendRefs:
        - name: positron
          port: 443
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anubis-general-routes
  namespace: traefik
  labels:
    app.kubernetes.io/name: anubis
    app.kubernetes.io/instance: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  rules:
    - matches:
        - path:
            type: Exact
            value: /robots.txt
          method: HEAD
        - path:
            type: Exact
            value: /robots.txt
          method: GET
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: default-cache
      backendRefs:
        - name: anubis
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /.within.website
      backendRefs:
        - name: anubis
          port: 8080
