sophons/apps/traefik/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: traefik
      k8s:app.kubernetes.io/instance: traefik-traefik
      k8s:app.kubernetes.io/component: proxy

  ingress:
    - fromEntities: [cluster]
    - fromCIDRSet:
        - cidrGroupRef: private-ranges

    - fromCIDRSet:
        - cidrGroupRef: bunny
        - cidrGroupRef: cloudflare
      toPorts:
        - ports:
            - port: web
              protocol: TCP
        - ports:
            - port: websecure
              protocol: TCP
            - port: websecure-http3
              protocol: UDP

    - toPorts:
        - ports:
            - port: ssh
              protocol: TCP
            - port: web
              protocol: TCP
        - ports:
            - port: websecure
              protocol: TCP
            - port: websecure-http3
              protocol: UDP
          # NOTE: Envoy must always be present in the traffic path, for _all_ clients,
          # to enforce these so envoy restarts will disrupt traffic. Also fucks with
          # client IP detection somehow.
          # serverNames:
          #   - hs.vrtx.sh
          #   - gghs.vrtx.sh
          #   - health.sphns.run
          #   - gimmich.sophons.cloud
